tests/negative/stray_token_in_expr.glyph
module neg

fn main() -> number {
  return @
}
